Fixed vertical alignment of inputs with appends, see http://codepen.io/patik/pen/gMLXej?editors=0100 and http://codepen.io/patik/pen/yJVpmP?editors=0100

--- a/src/cui/scss/_base/_form.scss
+++ b/src/cui/scss/_base/_form.scss
@@ -140,7 +140,7 @@ legend {
         position: relative;
         padding-left: 0;
         padding-right: 0;
-        margin-right: $cui-field-space-between-label-and-data; // Space between adjacent containers
+        margin-right: $cui-field-space-between-field-elements; // Space between adjacent containers
 
         // Apply the same styles that `<legend>` gets in any context (further up in this file)
         .cui-desc,
@@ -168,7 +168,7 @@ legend {
         & > * {
             // Space between adjacent controls
             &:not(:last-child) {
-                margin-right: (0.5 * $cui-font-size);
+                margin-right: $cui-field-space-between-controls;
             }
         }
 
@@ -245,10 +245,6 @@ legend {
 
             .cui-value {
                 line-height: normal;
-            }
-
-            .cui-input-wrapper {
-                display: flex;
             }
 
             .cui-label + .cui-controls {
@@ -360,7 +356,7 @@ legend {
         line-height: normal; // Prevent having too much space between items. That problem only affects inline fields, but it doesn't hurt to put the style here where it has less specificity
 
         label {
-            margin-left: (0.5 * $cui-field-space-between-label-and-data);
+            margin-left: (0.5 * $cui-field-space-between-field-elements);
         }
     }
 }
@@ -369,18 +365,15 @@ legend {
 // * @section    Input groups and field appends/prepends
 // * --------------------------------------------------------
 .cui-input-wrapper {
-    display: flex;
-    @include col;
-    border-collapse: separate; // Prevent input groups from inheriting border styles from table cells when placed within a table
+    display: table;
+    border-collapse: separate; // Prevent input groups from inheriting border styles from table cells when placed within a `<table>`
 
     input,
     select,
     .cui-input-prepend,
     .cui-input-append {
-        border-top-left-radius: 0;
-        border-top-right-radius: 0;
-        border-bottom-left-radius: 0;
-        border-bottom-right-radius: 0;
+        display: table-cell;
+        border-radius: 0;
     }
 
     // Keep borders rounded if no prepend
@@ -397,25 +390,21 @@ legend {
 
     .cui-input-prepend,
     .cui-input-append {
-        @include col(0 0 auto);
-        min-height: 0; // Override value from `@include col`
-        line-height: $cui-field-line-height;
-        border: $cui-input-border;
-        @include box-sizing(content-box);
-        background: $cui-input-bg-hover-color;
-        vertical-align: middle;
-        white-space: nowrap;
-        text-align: center;
         padding: $cui-input-padding;
+        white-space: nowrap;
+        border: $cui-input-border;
+        background: $cui-input-bg-hover-color;
     }
 
     .cui-input-prepend {
+        text-align: right;
         border-right: none;
         border-top-left-radius: $cui-input-border-radius;
         border-bottom-left-radius: $cui-input-border-radius;
     }
 
     .cui-input-append {
+        text-align: left;
         border-left: none;
         border-top-right-radius: $cui-input-border-radius;
         border-bottom-right-radius: $cui-input-border-radius;
@@ -423,24 +412,16 @@ legend {
 
     .cui-currency & {
         input {
-            flex: 0 1 auto;
-            padding-right: 4px; // Keep number inside input closer to append
+            padding-right: 4px; // Keep the input value closer to the append
         }
 
         .cui-input-prepend {
-            $cui-input-prepend-width: (1 * $cui-input-font-size);
-            flex: 0 0 $cui-input-prepend-width;
-            max-width: $cui-input-prepend-width;
             width: $cui-input-prepend-width;
-            line-height: (1.5 * $cui-input-font-size); // Use 50% more than the input's font size so the text vertically aligns
         }
 
         .cui-input-append {
-            $cui-input-append-width: (1.5 * $cui-input-font-size);
-            padding-left: 4px; // Keep number inside append closer to input
-            flex: 0 0 $cui-input-append-width;
-            max-width: $cui-input-append-width;
-            line-height: $cui-input-append-width; // Use 50% more than the input's font size so the text vertically aligns
+            width: $cui-input-append-width;
+            padding-left: 4px; // Keep the append closer to the input value
         }
     }
 }
